<resources>
    <string name="app_name">Meter2.0</string>
    <string name="sample_unit">Sample unit</string>
    <string name="meter_unit">Meter unit</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="step">Step</string>
    <string name="tap">Tap</string>
    <string name="count">Count</string>
    <string name="sample_value">Sample</string>
    <string name="measure_point">Speed</string>
    <string name="load">Load</string>
    <string name="times">n times</string>
    <string name="reset">Reset</string>
    <string name="center">Center</string>
    <string name="cancel">Cancel</string>

    <!-- UI Elements -->
    <string name="btn_capture">Click</string>

    <!-- Toast Messages -->
    <string name="camera_not_found">No camera harware found</string>
    <string name="take_photo_help">Touch anywhere on screen to take picture</string>


    <string name="camera_permission_confirmation">This app demonstrates the usage of CameraView. In order to do that, it needs permission to access camera.</string>
    <string name="camera_permission_not_granted">Camera app cannot do anything without camera permission.</string>
    <string name="picture_taken">Picture taken</string>
    <string name="aspect_ratio">Aspect ratio</string>
    <string name="switch_flash">Switch flash</string>
    <string name="switch_camera">Switch camera</string>
    <string name="flash_auto">Flash auto</string>
    <string name="flash_off">Flash off</string>
    <string name="flash_on">Flash on</string>
    <string name="warn">Warn</string>


    <!--bluetooth begin-->
    <string name="send">发送</string>
    <string name="not_connected">你没有连接一个设备</string>
    <string name="bt_not_enabled_leaving">蓝牙没有打开</string>
    <string name="title_bt_connecting">蓝牙连接中...</string>
    <string name="title_connected_to">连接到: </string>
    <string name="title_bt_connected">蓝牙OK</string>
    <string name="title_not_bt_connected">蓝牙断开</string>
    <string name="debug">Debug</string>
    <string name="about">About</string>
    <string name="about_msg">1.蓝牙处可以连接想要连接的蓝牙设备。
        \n2.网络设置处，输入电脑IP和端口，如果不输入，则使用默认值。请确保手机和电脑连接在同一局域网内。
        \n3.单位用于选择需要设置的单位。
        \n4.调试处用于测试发送指定的指令，蓝牙和网络均会发送。
        \n5.文件存储在手机目录下的Meter文件夹下。
        \n6.进入到拍照界面时，会自动连接蓝牙和wifi。
    </string>

    <!--  DeviceListActivity -->
    <string name="scanning">寻找设备...</string>
    <string name="select_device">选择一个设备去连接</string>
    <string name="none_paired">没有设备被请求</string>
    <string name="none_found">没有发现设备</string>
    <string name="title_paired_devices">可以连接的设备</string>
    <string name="title_other_devices">其他</string>
    <string name="discovery">寻找设备</string>

    <!-- Options Menu -->
    <string name="connect">连接一个设备</string>
    <string name="jianjie">About</string>
    <string name="discoverable">"Turn on "</string>
    <string name="cancel_discovery">停止扫描</string>
    <!--bluetooth end-->

    <string name="title_wifi_connected">WifiOk</string>
    <string name="title_wifi_connecting">Wifi连接中...</string>
    <string name="title_wifi_not_connected">Wifi断开</string>


    <string-array name="measure_unit_array">
        <item>N</item>
        <item>N•m</item>
        <item>MPa</item>
        <item>g</item>
        <item>Pa</item>
        <item>Pa·m³/s</item>
        <item>km</item>
        <item>Ω</item>
        <item>F</item>
        <item>H</item>
        <item>V</item>
        <item>A</item>
        <item>W</item>
        <item>m3/h</item>
        <item>℃</item>
    </string-array>

    <string-array name="unit_type_array">
        <item>力值</item>
        <item>扭矩</item>
        <item>压力</item>
        <item>质量</item>
        <item>真空</item>
        <item>漏率</item>
        <item>长度</item>
        <item>电阻</item>
        <item>电容</item>
        <item>电感</item>
        <item>电压</item>
        <item>电流</item>
        <item>功率</item>
        <item>流量</item>
        <item>温度</item>
        <item>能量</item>
        <item>空</item>
    </string-array>

    <!--<string-array name="n_unit_array">-->
    <!--<item>N		</item>-->
    <!--<item>kN    </item>-->
    <!--<item>cN    </item>-->
    <!--<item>mN    </item>-->
    <!--<item>kgf   </item>-->
    <!--<item>daN   </item>-->
    <!--<item>Lbf   </item>-->
    <!--</string-array>-->

    <!--<string-array name="torque_unit_array">-->
    <!--<item>N•m</item>-->
    <!--<item>mN•m</item>-->
    <!--<item>cN•m</item>-->
    <!--<item>dN•m</item>-->
    <!--<item>kgf•m</item>-->
    <!--<item>kgf•cm</item>-->
    <!--<item>Lbf•in</item>-->
    <!--<item>Lbf•ft</item>-->
    <!--<item>ozf•in</item>-->
    <!--</string-array>-->

    <!--<string-array name="pressure_unit_array">-->
    <!--<item>MPa</item>-->
    <!--<item>kPa</item>-->
    <!--<item>hPa</item>-->
    <!--<item>Pa</item>-->
    <!--<item>kgf/cm²</item>-->
    <!--<item>bar</item>-->
    <!--<item>mbar</item>-->
    <!--<item>psi</item>-->
    <!--<item>mmWC</item>-->
    <!--<item>inWC</item>-->
    <!--<item>mmHg</item>-->
    <!--</string-array>-->

    <!--<string-array name="weight_unit_array">-->
    <!--<item>g</item>-->
    <!--<item>mg</item>-->
    <!--<item>kg</item>-->
    <!--<item>t</item>-->
    <!--<item>N</item>-->
    <!--<item>cN</item>-->
    <!--<item>mN</item>-->
    <!--</string-array>-->

    <!--<string-array name="empty_unit_array">-->
    <!--<item>Pa</item>-->
    <!--<item>mbar</item>-->
    <!--<item>torr</item>-->
    <!--<item>hPa</item>-->
    <!--</string-array>-->

    <!--<string-array name="leak_rate_unit_array">-->
    <!--<item>Pa·m³/s</item>-->
    <!--<item>mbar·l/s</item>-->
    <!--<item>g/a</item>-->
    <!--</string-array>-->

    <string-array name="step_array">
        <item>0.0001</item>
        <item>0.001</item>
        <item>0.01</item>
        <item>0.1</item>
        <item>1</item>
        <item>10</item>
        <item>100</item>
        <item>1000</item>
        <item>10000</item>
    </string-array>

    <string-array name="tap_array">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>

    <string-array name="jinhui_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>

    </string-array>
    <string name="unit">Unit</string>
    <string name="saved_data">Saved data</string>
    <string name="measure_title">Meter</string>
    <string name="measure_title_measure">Measure</string>
    <string name="measure_title_calibrate">Calibrate</string>
    <string name="bluetooth">BT</string>
    <string name="network">Network</string>
    <string name="confirm">Confirm</string>
    <string name="reset_confirm">Are you sure to reset?</string>
    <string name="back_confirm">Are you sure to return back?</string>
    <string name="end_measure_confirm">确定结束本次测量吗？</string>
    <string name="change_confirm">Sure to change mode?</string>
    <string name="exit_confirm">Exit?</string>
    <string name="save_calibrate">Save</string>
    <string name="measure_end">This measure end</string>


    <!--<string-array name="speed_array">-->
    <!--<item>-10</item>-->
    <!--<item>-9</item>-->
    <!--<item>-8</item>-->
    <!--<item>-7</item>-->
    <!--<item>-6</item>-->
    <!--<item>-5</item>-->
    <!--<item>-4</item>-->
    <!--<item>-3</item>-->
    <!--<item>-2</item>-->
    <!--<item>-1</item>-->
    <!--<item>0</item>-->
    <!--<item>1</item>-->
    <!--<item>2</item>-->
    <!--<item>3</item>-->
    <!--<item>4</item>-->
    <!--<item>5</item>-->
    <!--<item>6</item>-->
    <!--<item>7</item>-->
    <!--<item>8</item>-->
    <!--<item>9</item>-->
    <!--<item>10</item>-->
    <!--</string-array>-->

    <!--<string-array name="check_array">-->
    <!--<item>-10</item>-->
    <!--<item>-5</item>-->
    <!--<item>-2</item>-->
    <!--<item>-1</item>-->
    <!--<item>0</item>-->
    <!--<item>1</item>-->
    <!--<item>2</item>-->
    <!--<item>5</item>-->
    <!--<item>10</item>-->
    <!--</string-array>-->
</resources>
